<resources>
    <string name="app_name">Tatva</string>
    <string name="app_icon">App Icon</string>
    <string name="app_tagline">Get Better EveryDay</string>
    <string name="app_name_marathi">\'तत्त्व\'</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string name="or">OR</string>
    <string name="name">Name</string>
</resources>